gemBS/tools/loki/libparsesrc/parse.output
Terminals which are not used

   ALIAS
   CMP_TOKEN
   VARIABLE
   EXPR_OP
   INF
   XNAN
   EMPTY_VAR
   SUB_EXPR


Grammar

    0 $accept: control_file $end

    1 control_file: statement
    2             | directive
    3             | control_file statement

    4 directive: include_com

    5 statement: ind_statement
    6          | '{' statement_block '}'

    7 statement_block: ind_statement
    8                | statement_block ind_statement

    9 ind_statement: ctypeI
   10              | ctypeII
   11              | ctypeIII
   12              | ctypeIV
   13              | ctypeV
   14              | ctype_bad
   15              | for_statement
   16              | if_statement
   17              | do_statement
   18              | while_statement
   19              | ';'

   20 ctypeI: COMMAND imm_expr
   21       | COMMAND imm_expr ',' var_list
   22       | COMMAND var_list
   23       | COMMAND clause imm_expr
   24       | COMMAND clause imm_expr ',' var_list
   25       | COMMAND clause var_list

   26 ctypeII: COMMAND var1 tok_list
   27        | KEYWORD COMMAND var1 tok_list

   28 assignment: var1 '=' gen_expr

   29 ctypeIII: COMMAND var1 '=' gen_expr
   30         | assignment
   31         | assignment ',' gen_expr_list
   32         | var1 POSTFIX
   33         | PREFIX var1
   34         | var1 MATH_SHORT gen_expr

   35 ctypeIV: COMMAND KEYWORD_B gen_expr ')'
   36        | KEYWORD var_list KEYWORD '(' gen_expr ')'
   37        | KEYWORD KEYWORD_B gen_expr ')'
   38        | KEYWORD_B gen_expr ')' KEYWORD var_list

   39 ctypeV: COMMAND KEYWORD var_list

   40 @1: /* empty */

   41 ctype_bad: KEYWORD '=' @1 gen_expr

   42 @2: /* empty */

   43 ctype_bad: KEYWORD_B gen_expr ')' '=' @2 gen_expr

   44 @3: /* empty */

   45 ctype_bad: COMMAND KEYWORD '=' @3 gen_expr

   46 @4: /* empty */

   47 ctype_bad: COMMAND KEYWORD_B gen_expr ')' '=' @4 gen_expr
   48          | TOKEN error
   49          | word expr_op gen_expr

   50 expr_op: '+'
   51        | '*'
   52        | '/'
   53        | '.'
   54        | '-'
   55        | '<'
   56        | '>'
   57        | LEQ_TOKEN
   58        | GEQ_TOKEN
   59        | NE_TOKEN
   60        | '&'
   61        | '|'
   62        | EXPO

   63 format_atom: CLAUSE_INT
   64            | CLAUSE_X

   65 @5: /* empty */

   66 format_atom: CLAUSE_INT CLAUSE_X @5
   67            | CLAUSE_INT '(' format_clause ')'
   68            | '(' format_clause ')'

   69 word: TOKEN
   70     | COMMAND

   71 format_clause: format_atom
   72              | format_clause ',' format_atom

   73 clause_elem: gen_expr_list1
   74            | format_clause

   75 clause_content: clause_elem
   76               | clause_content ';' clause_elem

   77 clause: begin_clause clause_content ']'
   78       | begin_clause ']'

   79 begin_clause: '['

   80 for_statement: FOR '(' opt_expr ';' opt_expr ';' opt_expr ')' statement

   81 if_statement: IF '(' gen_expr ')' statement
   82             | IF '(' gen_expr ')' statement ELSE statement

   83 do_statement: DO statement WHILE '(' gen_expr ')'

   84 while_statement: WHILE '(' gen_expr ')' statement

   85 opt_expr: /* empty */
   86         | gen_expr

   87 include_com: INCLUDE str_expr DUMMY

   88 tok_list: tok
   89         | tok_list ',' tok

   90 tok: imm_element

   91 array_index_elem: gen_expr
   92                 | gen_expr DOUBLE_DOT gen_expr
   93                 | DOUBLE_DOT gen_expr
   94                 | gen_expr DOUBLE_DOT
   95                 | CLAUSE_INT

   96 array_index: array_index_elem
   97            | array_index ',' array_index_elem

   98 var1: word
   99     | WORD_B array_index ')'

  100 var2: word
  101     | WORD_B array_index ')'
  102     | /* empty */

  103 loop_clause: '(' array_var_list ',' word '=' gen_expr_list1 ')'
  104            | '(' array_var_list ')'

  105 array_var_list: var2
  106               | array_var_list ',' var2
  107               | KEYWORD_B gen_expr ')'
  108               | KEYWORD
  109               | array_var_list ',' KEYWORD_B gen_expr ')'
  110               | array_var_list ',' KEYWORD

  111 var: var1
  112    | var1 clause

  113 var_list1: var
  114          | loop_clause

  115 poly_commas: ',' ','
  116            | poly_commas ','

  117 var_list: var_list1
  118         | ',' var_list1
  119         | poly_commas var_list1
  120         | var_list ',' var_list1
  121         | var_list poly_commas var_list1

  122 imm_expr: imm_element
  123         | imm_element1 '+' gen_expr
  124         | imm_element1 '.' gen_expr
  125         | imm_element1 '-' gen_expr
  126         | imm_element1 '/' gen_expr
  127         | imm_element1 '*' gen_expr
  128         | imm_element1 '<' gen_expr
  129         | imm_element1 '>' gen_expr
  130         | imm_element1 '&' gen_expr
  131         | imm_element1 '|' gen_expr
  132         | imm_element1 EQ_TOKEN gen_expr
  133         | imm_element1 NE_TOKEN gen_expr
  134         | imm_element1 LEQ_TOKEN gen_expr
  135         | imm_element1 GEQ_TOKEN gen_expr
  136         | imm_element1 EXPO gen_expr
  137         | '!' gen_expr
  138         | '(' imm_expr ')'
  139         | FUNCTION '(' imm_expr ')'

  140 str_op: '+'
  141       | '.'

  142 str_expr: str_elem
  143         | str_expr str_op str_elem1
  144         | var1 str_op str_elem1

  145 str_elem: STRING
  146         | FUNCTION '(' str_expr ')'

  147 str_elem1: str_elem
  148          | var1

  149 gen_expr_list: gen_expr
  150              | gen_expr_list ',' gen_expr

  151 gen_expr_list1: gen_expr
  152               | gen_expr_list1 ',' gen_expr

  153 gen_expr: gen_expr '+' gen_expr
  154         | gen_expr '-' gen_expr
  155         | gen_expr '.' gen_expr
  156         | gen_expr '*' gen_expr
  157         | gen_expr '/' gen_expr
  158         | gen_expr '=' gen_expr
  159         | gen_expr EQ_TOKEN gen_expr
  160         | gen_expr '<' gen_expr
  161         | gen_expr '>' gen_expr
  162         | gen_expr '|' gen_expr
  163         | gen_expr '&' gen_expr
  164         | gen_expr EXPO gen_expr
  165         | gen_expr LEQ_TOKEN gen_expr
  166         | gen_expr GEQ_TOKEN gen_expr
  167         | gen_expr NE_TOKEN gen_expr
  168         | gen_expr MATH_SHORT gen_expr
  169         | '-' gen_expr
  170         | '!' gen_expr
  171         | '(' gen_expr_list ')'
  172         | gen_element

  173 gen_element: imm_element
  174            | KEYWORD
  175            | KEYWORD_B
  176            | var1
  177            | var1 POSTFIX
  178            | PREFIX var1
  179            | FUNCTION '(' gen_expr ')'

  180 imm_element: INTEGER
  181            | REAL
  182            | STRING

  183 imm_element1: imm_element
  184             | var1


Terminals, with rules where they appear

$end (0) 0
'!' (33) 137 170
'&' (38) 60 130 163
'(' (40) 36 67 68 80 81 82 83 84 103 104 138 139 146 171 179
')' (41) 35 36 37 38 43 47 67 68 80 81 82 83 84 99 101 103 104 107
    109 138 139 146 171 179
'*' (42) 51 127 156
'+' (43) 50 123 140 153
',' (44) 21 24 31 72 89 97 103 106 109 110 115 116 118 120 150 152
'-' (45) 54 125 154 169
'.' (46) 53 124 141 155
'/' (47) 52 126 157
';' (59) 19 76 80
'<' (60) 55 128 160
'=' (61) 28 29 41 43 45 47 103 158
'>' (62) 56 129 161
'[' (91) 79
']' (93) 77 78
'{' (123) 6
'|' (124) 61 131 162
'}' (125) 6
error (256) 48
ALIAS (258)
FOR (259) 80
IF (260) 81 82
ELSE (261) 82
DO (262) 83
WHILE (263) 83 84
INCLUDE (264) 87
NE_TOKEN (265) 59 133 167
LEQ_TOKEN (266) 57 134 165
GEQ_TOKEN (267) 58 135 166
CMP_TOKEN (268)
VARIABLE (269)
EXPR_OP (270)
INF (271)
XNAN (272)
DUMMY (273) 87
DOUBLE_DOT (274) 92 93 94
EMPTY_VAR (275)
EXPO (276) 62 136 164
CLAUSE_X (277) 64 66
EQ_TOKEN (278) 132 159
SUB_EXPR (279)
STRING (280) 145 182
INTEGER (281) 180
CLAUSE_INT (282) 63 66 67 95
PREFIX (283) 33 178
POSTFIX (284) 32 177
MATH_SHORT (285) 34 168
KEYWORD (286) 27 36 37 38 39 41 45 108 110 174
KEYWORD_B (287) 35 37 38 43 47 107 109 175
REAL (288) 181
TOKEN (289) 48 69
WORD_B (290) 99 101
COMMAND (291) 20 21 22 23 24 25 26 27 29 35 39 45 47 70
FUNCTION (292) 139 146 179
LOWER_THAN_ELSE (293)
UMINUS (294)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
control_file (60)
    on left: 1 2 3, on right: 0 3
directive (61)
    on left: 4, on right: 2
statement (62)
    on left: 5 6, on right: 1 3 80 81 82 83 84
statement_block (63)
    on left: 7 8, on right: 6 8
ind_statement (64)
    on left: 9 10 11 12 13 14 15 16 17 18 19, on right: 5 7 8
ctypeI (65)
    on left: 20 21 22 23 24 25, on right: 9
ctypeII (66)
    on left: 26 27, on right: 10
assignment (67)
    on left: 28, on right: 30 31
ctypeIII (68)
    on left: 29 30 31 32 33 34, on right: 11
ctypeIV (69)
    on left: 35 36 37 38, on right: 12
ctypeV (70)
    on left: 39, on right: 13
ctype_bad (71)
    on left: 41 43 45 47 48 49, on right: 14
@1 (72)
    on left: 40, on right: 41
@2 (73)
    on left: 42, on right: 43
@3 (74)
    on left: 44, on right: 45
@4 (75)
    on left: 46, on right: 47
expr_op (76)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62,
    on right: 49
format_atom (77)
    on left: 63 64 66 67 68, on right: 71 72
@5 (78)
    on left: 65, on right: 66
word (79)
    on left: 69 70, on right: 49 98 100 103
format_clause (80)
    on left: 71 72, on right: 67 68 72 74
clause_elem (81)
    on left: 73 74, on right: 75 76
clause_content (82)
    on left: 75 76, on right: 76 77
clause (83)
    on left: 77 78, on right: 23 24 25 112
begin_clause (84)
    on left: 79, on right: 77 78
for_statement (85)
    on left: 80, on right: 15
if_statement (86)
    on left: 81 82, on right: 16
do_statement (87)
    on left: 83, on right: 17
while_statement (88)
    on left: 84, on right: 18
opt_expr (89)
    on left: 85 86, on right: 80
include_com (90)
    on left: 87, on right: 4
tok_list (91)
    on left: 88 89, on right: 26 27 89
tok (92)
    on left: 90, on right: 88 89
array_index_elem (93)
    on left: 91 92 93 94 95, on right: 96 97
array_index (94)
    on left: 96 97, on right: 97 99 101
var1 (95)
    on left: 98 99, on right: 26 27 28 29 32 33 34 111 112 144 148
    176 177 178 184
var2 (96)
    on left: 100 101 102, on right: 105 106
loop_clause (97)
    on left: 103 104, on right: 114
array_var_list (98)
    on left: 105 106 107 108 109 110, on right: 103 104 106 109 110
var (99)
    on left: 111 112, on right: 113
var_list1 (100)
    on left: 113 114, on right: 117 118 119 120 121
poly_commas (101)
    on left: 115 116, on right: 116 119 121
var_list (102)
    on left: 117 118 119 120 121, on right: 21 22 24 25 36 38 39 120
    121
imm_expr (103)
    on left: 122 123 124 125 126 127 128 129 130 131 132 133 134 135
    136 137 138 139, on right: 20 21 23 24 138 139
str_op (104)
    on left: 140 141, on right: 143 144
str_expr (105)
    on left: 142 143 144, on right: 87 143 146
str_elem (106)
    on left: 145 146, on right: 142 147
str_elem1 (107)
    on left: 147 148, on right: 143 144
gen_expr_list (108)
    on left: 149 150, on right: 31 150 171
gen_expr_list1 (109)
    on left: 151 152, on right: 73 103 152
gen_expr (110)
    on left: 153 154 155 156 157 158 159 160 161 162 163 164 165 166
    167 168 169 170 171 172, on right: 28 29 34 35 36 37 38 41 43 45
    47 49 81 82 83 84 86 91 92 93 94 107 109 123 124 125 126 127 128
    129 130 131 132 133 134 135 136 137 149 150 151 152 153 154 155
    156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 179
gen_element (111)
    on left: 173 174 175 176 177 178 179, on right: 172
imm_element (112)
    on left: 180 181 182, on right: 90 122 173 183
imm_element1 (113)
    on left: 183 184, on right: 123 124 125 126 127 128 129 130 131
    132 133 134 135 136


state 0

    0 $accept: . control_file $end

    FOR        shift, and go to state 1
    IF         shift, and go to state 2
    DO         shift, and go to state 3
    WHILE      shift, and go to state 4
    INCLUDE    shift, and go to state 5
    PREFIX     shift, and go to state 6
    KEYWORD    shift, and go to state 7
    KEYWORD_B  shift, and go to state 8
    TOKEN      shift, and go to state 9
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 11
    '{'        shift, and go to state 12
    ';'        shift, and go to state 13

    control_file     go to state 14
    directive        go to state 15
    statement        go to state 16
    ind_statement    go to state 17
    ctypeI           go to state 18
    ctypeII          go to state 19
    assignment       go to state 20
    ctypeIII         go to state 21
    ctypeIV          go to state 22
    ctypeV           go to state 23
    ctype_bad        go to state 24
    word             go to state 25
    for_statement    go to state 26
    if_statement     go to state 27
    do_statement     go to state 28
    while_statement  go to state 29
    include_com      go to state 30
    var1             go to state 31


state 1

   80 for_statement: FOR . '(' opt_expr ';' opt_expr ';' opt_expr ')' statement

    '('  shift, and go to state 32


state 2

   81 if_statement: IF . '(' gen_expr ')' statement
   82             | IF . '(' gen_expr ')' statement ELSE statement

    '('  shift, and go to state 33


state 3

   83 do_statement: DO . statement WHILE '(' gen_expr ')'

    FOR        shift, and go to state 1
    IF         shift, and go to state 2
    DO         shift, and go to state 3
    WHILE      shift, and go to state 4
    PREFIX     shift, and go to state 6
    KEYWORD    shift, and go to state 7
    KEYWORD_B  shift, and go to state 8
    TOKEN      shift, and go to state 9
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 11
    '{'        shift, and go to state 12
    ';'        shift, and go to state 13

    statement        go to state 34
    ind_statement    go to state 17
    ctypeI           go to state 18
    ctypeII          go to state 19
    assignment       go to state 20
    ctypeIII         go to state 21
    ctypeIV          go to state 22
    ctypeV           go to state 23
    ctype_bad        go to state 24
    word             go to state 25
    for_statement    go to state 26
    if_statement     go to state 27
    do_statement     go to state 28
    while_statement  go to state 29
    var1             go to state 31


state 4

   84 while_statement: WHILE . '(' gen_expr ')' statement

    '('  shift, and go to state 35


state 5

   87 include_com: INCLUDE . str_expr DUMMY

    STRING    shift, and go to state 36
    TOKEN     shift, and go to state 37
    WORD_B    shift, and go to state 10
    COMMAND   shift, and go to state 38
    FUNCTION  shift, and go to state 39

    word      go to state 40
    var1      go to state 41
    str_expr  go to state 42
    str_elem  go to state 43


state 6

   33 ctypeIII: PREFIX . var1

    TOKEN    shift, and go to state 37
    WORD_B   shift, and go to state 10
    COMMAND  shift, and go to state 38

    word  go to state 40
    var1  go to state 44


state 7

   27 ctypeII: KEYWORD . COMMAND var1 tok_list
   36 ctypeIV: KEYWORD . var_list KEYWORD '(' gen_expr ')'
   37        | KEYWORD . KEYWORD_B gen_expr ')'
   41 ctype_bad: KEYWORD . '=' @1 gen_expr

    KEYWORD_B  shift, and go to state 45
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 46
    ','        shift, and go to state 47
    '='        shift, and go to state 48
    '('        shift, and go to state 49

    word         go to state 40
    var1         go to state 50
    loop_clause  go to state 51
    var          go to state 52
    var_list1    go to state 53
    poly_commas  go to state 54
    var_list     go to state 55


state 8

   38 ctypeIV: KEYWORD_B . gen_expr ')' KEYWORD var_list
   43 ctype_bad: KEYWORD_B . gen_expr ')' '=' @2 gen_expr

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    PREFIX     shift, and go to state 58
    KEYWORD    shift, and go to state 59
    KEYWORD_B  shift, and go to state 60
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 62
    '-'        shift, and go to state 63
    '!'        shift, and go to state 64
    '('        shift, and go to state 65

    word         go to state 40
    var1         go to state 66
    gen_expr     go to state 67
    gen_element  go to state 68
    imm_element  go to state 69


state 9

   48 ctype_bad: TOKEN . error
   69 word: TOKEN .

    error  shift, and go to state 70

    NE_TOKEN    reduce using rule 69 (word)
    LEQ_TOKEN   reduce using rule 69 (word)
    GEQ_TOKEN   reduce using rule 69 (word)
    EXPO        reduce using rule 69 (word)
    POSTFIX     reduce using rule 69 (word)
    MATH_SHORT  reduce using rule 69 (word)
    '='         reduce using rule 69 (word)
    '|'         reduce using rule 69 (word)
    '&'         reduce using rule 69 (word)
    '<'         reduce using rule 69 (word)
    '>'         reduce using rule 69 (word)
    '-'         reduce using rule 69 (word)
    '+'         reduce using rule 69 (word)
    '.'         reduce using rule 69 (word)
    '*'         reduce using rule 69 (word)
    '/'         reduce using rule 69 (word)


state 10

   99 var1: WORD_B . array_index ')'

    DOUBLE_DOT  shift, and go to state 71
    STRING      shift, and go to state 56
    INTEGER     shift, and go to state 57
    CLAUSE_INT  shift, and go to state 72
    PREFIX      shift, and go to state 58
    KEYWORD     shift, and go to state 59
    KEYWORD_B   shift, and go to state 60
    REAL        shift, and go to state 61
    TOKEN       shift, and go to state 37
    WORD_B      shift, and go to state 10
    COMMAND     shift, and go to state 38
    FUNCTION    shift, and go to state 62
    '-'         shift, and go to state 63
    '!'         shift, and go to state 64
    '('         shift, and go to state 65

    word              go to state 40
    array_index_elem  go to state 73
    array_index       go to state 74
    var1              go to state 66
    gen_expr          go to state 75
    gen_element       go to state 68
    imm_element       go to state 69


state 11

   20 ctypeI: COMMAND . imm_expr
   21       | COMMAND . imm_expr ',' var_list
   22       | COMMAND . var_list
   23       | COMMAND . clause imm_expr
   24       | COMMAND . clause imm_expr ',' var_list
   25       | COMMAND . clause var_list
   26 ctypeII: COMMAND . var1 tok_list
   29 ctypeIII: COMMAND . var1 '=' gen_expr
   35 ctypeIV: COMMAND . KEYWORD_B gen_expr ')'
   39 ctypeV: COMMAND . KEYWORD var_list
   45 ctype_bad: COMMAND . KEYWORD '=' @3 gen_expr
   47          | COMMAND . KEYWORD_B gen_expr ')' '=' @4 gen_expr
   70 word: COMMAND .

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    KEYWORD    shift, and go to state 76
    KEYWORD_B  shift, and go to state 77
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 78
    ','        shift, and go to state 47
    '!'        shift, and go to state 79
    '('        shift, and go to state 80
    '['        shift, and go to state 81

    $default  reduce using rule 70 (word)

    word          go to state 40
    clause        go to state 82
    begin_clause  go to state 83
    var1          go to state 84
    loop_clause   go to state 51
    var           go to state 52
    var_list1     go to state 53
    poly_commas   go to state 54
    var_list      go to state 85
    imm_expr      go to state 86
    imm_element   go to state 87
    imm_element1  go to state 88


state 12

    6 statement: '{' . statement_block '}'

    FOR        shift, and go to state 1
    IF         shift, and go to state 2
    DO         shift, and go to state 3
    WHILE      shift, and go to state 4
    PREFIX     shift, and go to state 6
    KEYWORD    shift, and go to state 7
    KEYWORD_B  shift, and go to state 8
    TOKEN      shift, and go to state 9
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 11
    ';'        shift, and go to state 13

    statement_block  go to state 89
    ind_statement    go to state 90
    ctypeI           go to state 18
    ctypeII          go to state 19
    assignment       go to state 20
    ctypeIII         go to state 21
    ctypeIV          go to state 22
    ctypeV           go to state 23
    ctype_bad        go to state 24
    word             go to state 25
    for_statement    go to state 26
    if_statement     go to state 27
    do_statement     go to state 28
    while_statement  go to state 29
    var1             go to state 31


state 13

   19 ind_statement: ';' .

    $default  reduce using rule 19 (ind_statement)


state 14

    0 $accept: control_file . $end
    3 control_file: control_file . statement

    $end       shift, and go to state 91
    FOR        shift, and go to state 1
    IF         shift, and go to state 2
    DO         shift, and go to state 3
    WHILE      shift, and go to state 4
    PREFIX     shift, and go to state 6
    KEYWORD    shift, and go to state 7
    KEYWORD_B  shift, and go to state 8
    TOKEN      shift, and go to state 9
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 11
    '{'        shift, and go to state 12
    ';'        shift, and go to state 13

    statement        go to state 92
    ind_statement    go to state 17
    ctypeI           go to state 18
    ctypeII          go to state 19
    assignment       go to state 20
    ctypeIII         go to state 21
    ctypeIV          go to state 22
    ctypeV           go to state 23
    ctype_bad        go to state 24
    word             go to state 25
    for_statement    go to state 26
    if_statement     go to state 27
    do_statement     go to state 28
    while_statement  go to state 29
    var1             go to state 31


state 15

    2 control_file: directive .

    $default  reduce using rule 2 (control_file)


state 16

    1 control_file: statement .

    $default  reduce using rule 1 (control_file)


state 17

    5 statement: ind_statement .

    $default  reduce using rule 5 (statement)


state 18

    9 ind_statement: ctypeI .

    $default  reduce using rule 9 (ind_statement)


state 19

   10 ind_statement: ctypeII .

    $default  reduce using rule 10 (ind_statement)


state 20

   30 ctypeIII: assignment .
   31         | assignment . ',' gen_expr_list

    ','  shift, and go to state 93

    $default  reduce using rule 30 (ctypeIII)


state 21

   11 ind_statement: ctypeIII .

    $default  reduce using rule 11 (ind_statement)


state 22

   12 ind_statement: ctypeIV .

    $default  reduce using rule 12 (ind_statement)


state 23

   13 ind_statement: ctypeV .

    $default  reduce using rule 13 (ind_statement)


state 24

   14 ind_statement: ctype_bad .

    $default  reduce using rule 14 (ind_statement)


state 25

   49 ctype_bad: word . expr_op gen_expr
   98 var1: word .

    NE_TOKEN   shift, and go to state 94
    LEQ_TOKEN  shift, and go to state 95
    GEQ_TOKEN  shift, and go to state 96
    EXPO       shift, and go to state 97
    '|'        shift, and go to state 98
    '&'        shift, and go to state 99
    '<'        shift, and go to state 100
    '>'        shift, and go to state 101
    '-'        shift, and go to state 102
    '+'        shift, and go to state 103
    '.'        shift, and go to state 104
    '*'        shift, and go to state 105
    '/'        shift, and go to state 106

    $default  reduce using rule 98 (var1)

    expr_op  go to state 107


state 26

   15 ind_statement: for_statement .

    $default  reduce using rule 15 (ind_statement)


state 27

   16 ind_statement: if_statement .

    $default  reduce using rule 16 (ind_statement)


state 28

   17 ind_statement: do_statement .

    $default  reduce using rule 17 (ind_statement)


state 29

   18 ind_statement: while_statement .

    $default  reduce using rule 18 (ind_statement)


state 30

    4 directive: include_com .

    $default  reduce using rule 4 (directive)


state 31

   28 assignment: var1 . '=' gen_expr
   32 ctypeIII: var1 . POSTFIX
   34         | var1 . MATH_SHORT gen_expr

    POSTFIX     shift, and go to state 108
    MATH_SHORT  shift, and go to state 109
    '='         shift, and go to state 110


state 32

   80 for_statement: FOR '(' . opt_expr ';' opt_expr ';' opt_expr ')' statement

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    PREFIX     shift, and go to state 58
    KEYWORD    shift, and go to state 59
    KEYWORD_B  shift, and go to state 60
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 62
    '-'        shift, and go to state 63
    '!'        shift, and go to state 64
    '('        shift, and go to state 65

    $default  reduce using rule 85 (opt_expr)

    word         go to state 40
    opt_expr     go to state 111
    var1         go to state 66
    gen_expr     go to state 112
    gen_element  go to state 68
    imm_element  go to state 69


state 33

   81 if_statement: IF '(' . gen_expr ')' statement
   82             | IF '(' . gen_expr ')' statement ELSE statement

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    PREFIX     shift, and go to state 58
    KEYWORD    shift, and go to state 59
    KEYWORD_B  shift, and go to state 60
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 62
    '-'        shift, and go to state 63
    '!'        shift, and go to state 64
    '('        shift, and go to state 65

    word         go to state 40
    var1         go to state 66
    gen_expr     go to state 113
    gen_element  go to state 68
    imm_element  go to state 69


state 34

   83 do_statement: DO statement . WHILE '(' gen_expr ')'

    WHILE  shift, and go to state 114


state 35

   84 while_statement: WHILE '(' . gen_expr ')' statement

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    PREFIX     shift, and go to state 58
    KEYWORD    shift, and go to state 59
    KEYWORD_B  shift, and go to state 60
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 62
    '-'        shift, and go to state 63
    '!'        shift, and go to state 64
    '('        shift, and go to state 65

    word         go to state 40
    var1         go to state 66
    gen_expr     go to state 115
    gen_element  go to state 68
    imm_element  go to state 69


state 36

  145 str_elem: STRING .

    $default  reduce using rule 145 (str_elem)


state 37

   69 word: TOKEN .

    $default  reduce using rule 69 (word)


state 38

   70 word: COMMAND .

    $default  reduce using rule 70 (word)


state 39

  146 str_elem: FUNCTION . '(' str_expr ')'

    '('  shift, and go to state 116


state 40

   98 var1: word .

    $default  reduce using rule 98 (var1)


state 41

  144 str_expr: var1 . str_op str_elem1

    '+'  shift, and go to state 117
    '.'  shift, and go to state 118

    str_op  go to state 119


state 42

   87 include_com: INCLUDE str_expr . DUMMY
  143 str_expr: str_expr . str_op str_elem1

    DUMMY  shift, and go to state 120
    '+'    shift, and go to state 117
    '.'    shift, and go to state 118

    str_op  go to state 121


state 43

  142 str_expr: str_elem .

    $default  reduce using rule 142 (str_expr)


state 44

   33 ctypeIII: PREFIX var1 .

    $default  reduce using rule 33 (ctypeIII)


state 45

   37 ctypeIV: KEYWORD KEYWORD_B . gen_expr ')'

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    PREFIX     shift, and go to state 58
    KEYWORD    shift, and go to state 59
    KEYWORD_B  shift, and go to state 60
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 62
    '-'        shift, and go to state 63
    '!'        shift, and go to state 64
    '('        shift, and go to state 65

    word         go to state 40
    var1         go to state 66
    gen_expr     go to state 122
    gen_element  go to state 68
    imm_element  go to state 69


state 46

   27 ctypeII: KEYWORD COMMAND . var1 tok_list
   70 word: COMMAND .

    TOKEN    shift, and go to state 37
    WORD_B   shift, and go to state 10
    COMMAND  shift, and go to state 38

    $default  reduce using rule 70 (word)

    word  go to state 40
    var1  go to state 123


state 47

  115 poly_commas: ',' . ','
  118 var_list: ',' . var_list1

    TOKEN    shift, and go to state 37
    WORD_B   shift, and go to state 10
    COMMAND  shift, and go to state 38
    ','      shift, and go to state 124
    '('      shift, and go to state 49

    word         go to state 40
    var1         go to state 50
    loop_clause  go to state 51
    var          go to state 52
    var_list1    go to state 125


state 48

   41 ctype_bad: KEYWORD '=' . @1 gen_expr

    $default  reduce using rule 40 (@1)

    @1  go to state 126


state 49

  103 loop_clause: '(' . array_var_list ',' word '=' gen_expr_list1 ')'
  104            | '(' . array_var_list ')'

    KEYWORD    shift, and go to state 127
    KEYWORD_B  shift, and go to state 128
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 129
    COMMAND    shift, and go to state 38

    $default  reduce using rule 102 (var2)

    word            go to state 130
    var2            go to state 131
    array_var_list  go to state 132


state 50

  111 var: var1 .
  112    | var1 . clause

    '['  shift, and go to state 81

    $default  reduce using rule 111 (var)

    clause        go to state 133
    begin_clause  go to state 83


state 51

  114 var_list1: loop_clause .

    $default  reduce using rule 114 (var_list1)


state 52

  113 var_list1: var .

    $default  reduce using rule 113 (var_list1)


state 53

  117 var_list: var_list1 .

    $default  reduce using rule 117 (var_list)


state 54

  116 poly_commas: poly_commas . ','
  119 var_list: poly_commas . var_list1

    TOKEN    shift, and go to state 37
    WORD_B   shift, and go to state 10
    COMMAND  shift, and go to state 38
    ','      shift, and go to state 134
    '('      shift, and go to state 49

    word         go to state 40
    var1         go to state 50
    loop_clause  go to state 51
    var          go to state 52
    var_list1    go to state 135


state 55

   36 ctypeIV: KEYWORD var_list . KEYWORD '(' gen_expr ')'
  120 var_list: var_list . ',' var_list1
  121         | var_list . poly_commas var_list1

    KEYWORD  shift, and go to state 136
    ','      shift, and go to state 137

    poly_commas  go to state 138


state 56

  182 imm_element: STRING .

    $default  reduce using rule 182 (imm_element)


state 57

  180 imm_element: INTEGER .

    $default  reduce using rule 180 (imm_element)


state 58

  178 gen_element: PREFIX . var1

    TOKEN    shift, and go to state 37
    WORD_B   shift, and go to state 10
    COMMAND  shift, and go to state 38

    word  go to state 40
    var1  go to state 139


state 59

  174 gen_element: KEYWORD .

    $default  reduce using rule 174 (gen_element)


state 60

  175 gen_element: KEYWORD_B .

    $default  reduce using rule 175 (gen_element)


state 61

  181 imm_element: REAL .

    $default  reduce using rule 181 (imm_element)


state 62

  179 gen_element: FUNCTION . '(' gen_expr ')'

    '('  shift, and go to state 140


state 63

  169 gen_expr: '-' . gen_expr

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    PREFIX     shift, and go to state 58
    KEYWORD    shift, and go to state 59
    KEYWORD_B  shift, and go to state 60
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 62
    '-'        shift, and go to state 63
    '!'        shift, and go to state 64
    '('        shift, and go to state 65

    word         go to state 40
    var1         go to state 66
    gen_expr     go to state 141
    gen_element  go to state 68
    imm_element  go to state 69


state 64

  170 gen_expr: '!' . gen_expr

    STRING     shift, and go to state 56
    INTEGER    shift, and go to state 57
    PREFIX     shift, and go to state 58
    KEYWORD    shift, and go to state 59
    KEYWORD_B  shift, and go to state 60
    REAL       shift, and go to state 61
    TOKEN      shift, and go to state 37
    WORD_B     shift, and go to state 10
    COMMAND    shift, and go to state 38
    FUNCTION   shift, and go to state 62
    '-'        shift, and go to state 63
    '!'        shift, and go to state 64
    '('        shift, and go to state 65

    word         go to state 40
    var1         go to state 66
    gen_expr     go to state 142
    gen_element  go to state 68
    imm_element  go to state 69


state 65

  171 gen_expr: '(' . gen_expr_list ')'
